2007-09-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad_init.c: Improve error recovery if ctable datum shift files
	fails to load.

2007-08-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_api.h: include void in arg list for prototypes with no
	arguments to avoid warning about not being a function declaration.

2007-07-06  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_open_lib.c: Per suggestion from Janne, ensure
	pj_set_searchpath(0,NULL) clears the search path cleanly.

2007-06-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj.c: pj_free() the definition to simplify leak testing.

2007-04-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_laea.c: Fix memory leak of apa field.

2007-04-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_gn_sinu.c: remove duplicate call to pj_enfn() (bug #1536)

2007-03-12  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_utils.c: Removed duplicate appending of towgs84 parameter.

2007-03-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h: Ensure that WIN32 is defined on win32 systems.
	
	* src/pj_open_lib.c: support drive letter prefixes on absolute
	paths.  Support either \ or / as a dir delimeter on windows (bug 1499)

2007-03-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_krovak.c: info string change to report ellipsoidal instead
	of spherical per email from Markus.

2007-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datum_set.cpp: Don't parse more datum shift parameters than
	we have space to store in datum_params[]. 

2006-11-02  Frank Warmerdam  <warmerdam@pobox.com>

	* src/rtodms.c: Fix computation of degree per bug described on the
	mailing list.

2006-10-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare for 4.5.0 final release.

2006-10-18  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: added polish zones (2172-2175) manually per request from
	Maciek on the mailing list.

	* Preparing 4.5.0 beta4 release.
